RESOLVED FIXED119351
[Windows] Winlauncher shouldn't look for Safari Install Directory
https://bugs.webkit.org/show_bug.cgi?id=119351
Summary [Windows] Winlauncher shouldn't look for Safari Install Directory
Brent Fulgham
Reported 2013-07-31 14:17:06 PDT
The way we distribute the support libraries needed by WinLauncher and other software has changed. Instead of looking for the Safari directory (which may not exist), use the 'Common Files' target location where all support libraries are installed. This will avoid set-up problems on new systems, and make it easier to setup and deploy build/test bots.
Attachments
Patch (2.80 KB, patch)
2013-07-31 14:26 PDT, Brent Fulgham
darin: review+
Brent Fulgham
Comment 1 2013-07-31 14:26:31 PDT
Darin Adler
Comment 2 2013-07-31 15:29:38 PDT
Comment on attachment 207877 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207877&action=review > Tools/win/DLLLauncher/DLLLauncherMain.cpp:124 > +static bool directoryExists(wstring path) I suggest const wstring& here.
Brent Fulgham
Comment 3 2013-07-31 15:36:07 PDT
(In reply to comment #2) > (From update of attachment 207877 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=207877&action=review > > > Tools/win/DLLLauncher/DLLLauncherMain.cpp:124 > > +static bool directoryExists(wstring path) > > I suggest const wstring& here. Ah! Missed that. Thanks!
Brent Fulgham
Comment 4 2013-07-31 16:07:02 PDT
Note You need to log in before you can comment on or make changes to this bug.