[Windows] Winlauncher shouldn't look for Safari Install Directory https://bugs.webkit.org/show_bug.cgi?id=119351

Reviewed by Darin Adler.

* win/DLLLauncher/DLLLauncherMain.cpp: Don't check registry for
the Safari install location. Instead, use the proper support
library path for the build architecture.


Canonical link: https://commits.webkit.org/137303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153544 268f45cc-cd09-0410-ab3c-d52691b4dbfc